fix (Footer) : Footer Fixed Bottom Position
- Make sure the footer is at the bottom of the page
- Make sure the content of the main can be scrolled and is not hidden by the footer

Jira ticket : [DAJR-61](https://ac-dev-js.atlassian.net/browse/DAJR-61)

--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -1,4 +1,6 @@
 .footer {
+  width: 100%;
+
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -6,12 +8,12 @@
   background-color: var(--color-black);
 
   padding: 62px 0;
+}
 
-  & p {
-    color: var(--color-white);
+.footer p {
+  color: var(--color-white);
 
-    margin-top: 24px;
-  }
+  margin-top: 24px;
 }
 
 .logo {
